syntax = "proto3";

package stagedpipe.distrib.nodes.worker;

option go_package = "github.com/johnsiilver/pipelines/stagedpipe/distrib/nodes/worker/proto";

message RequestGroupReq {
    oneof message {
        // The first message sent to the worker.  It contains the name of the plugin
        // to open and the JSON encoded RGConfig for this RequestGroup.
        OpenGroupReq open_group = 1;
        // The data to send to the worker. Every message after the first will be
        // data until CloseGroupReq is sent.
        Data data = 2;
    }
}

message OpenGroupReq {
    // The name of the plugin to open.
    string plugin = 1;
    // The JSON encoded RGConfig for this RequestGroup for this plugin.
    bytes config = 2;
}

message RequestGroupResp {
    oneof message {
        Data data = 1;
    }
}

message Data {
    uint32 seq = 1;
    bytes data = 2;
}

service Worker {
    rpc RequestGroup(stream RequestGroupReq) returns (stream RequestGroupResp) {}
}
